src/test/ui/issues/issue-59508-1.stderr
warning: the feature `const_generics` is incomplete and may cause the compiler to crash
  --> $DIR/issue-59508-1.rs:2:12
   |
LL | #![feature(const_generics)]
   |            ^^^^^^^^^^^^^^

error: incorrect parameter order
  --> $DIR/issue-59508-1.rs:12:21
   |
LL |     pub fn do_things<T, 'a, 'b: 'a>() {
   |                     ^^^^^^^^^^^^^^^ help: reorder the parameters: `<'a, 'b: 'a, T>`

error: aborting due to previous error

